Revert "refactor: Replace `Stream.collect(Collectors.toUnmodifiableList())` with `Stream.toList()`"
This reverts commit 2fe03e5b4badf41a36ba3519424fd6a8e853fb0f.