@@ -25,6 +25,7 @@ import org.openrewrite.marker.Range;
 
 import java.util.List;
 import java.util.function.UnaryOperator;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -66,7 +67,7 @@ class UpdateSourcePositionsTest {
                 }
             }
             """
-        ).toList();
+        ).collect(Collectors.toList());
         Result result = new UpdateSourcePositions().run(new InMemoryLargeSourceSet(cus), new InMemoryExecutionContext(), 1).getChangeset().getAllResults().getFirst();
         assertThat(printWithLines(result.getAfter())).isEqualTo(
           """
@@ -97,7 +98,7 @@ class UpdateSourcePositionsTest {
                 }
             }
             """
-        ).toList();
+        ).collect(Collectors.toList());
         Result result = new UpdateSourcePositions().run(new InMemoryLargeSourceSet(cus), new InMemoryExecutionContext(), 1).getChangeset().getAllResults().getFirst();
         assertThat(printWithLines(result.getAfter())).isEqualTo(
           """
